added more to my About page

--- a/style.css
+++ b/style.css
@@ -8,6 +8,9 @@
     height:50px;
     width:50px;
 }
+#line {
+    border-top: 5px solid wheat;
+}
 .navbar-expand-lg .navbar-nav .nav-link {
     padding-right: .5rem;
     padding-left: 2.5rem;
