--- a/gallery.css
+++ b/gallery.css
@@ -8,6 +8,14 @@
     height:50px;
     width:50px;
 }
+.fade:not(.show) {
+    opacity: 1;
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+.modal-dialog {
+    max-width: 455px;
+    margin: 12rem auto;
+}
 .navbar-expand-lg .navbar-nav .nav-link {
     padding-right: .5rem;
     padding-left: 2.5rem;
@@ -52,7 +60,7 @@ div .container {
     width: 100%;
     height: 1350px;
     overflow: hidden;
-    margin-top: 200px;
+    margin-top: -700px;
 }
 .container {
     width: 100%;
